syntax="proto3";

option java_package = "com.stackroute.grpc";
option java_multiple_files= true;
import "google/protobuf/timestamp.proto";

message Slot{
  string slotId=1;
  int32 empId=2;
  google.protobuf.Timestamp slotDate=3;
  string startTime=4;
  string stopTime=5;
  string status= 6;
  string ifscCode= 7;
}

service slotCreate{
  rpc createSlot(Slot) returns (Slot);
  rpc transferSlot(Slot) returns (Slot);
}
